Remove nested front-end react codebase from repo (#1)
* Remove nested client/FE react app from codebase

* Remove custom lint + tsc code related to client monorepo

* Remove serving of no longer relevant React client

* Remove all client related npm scripts

* Remove client references from deprecated UPenn docs

--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "setup": "yarn install && cd src/client && yarn install",
-    "dev": "concurrently \"yarn server\" \"yarn client\"",
     "server": "ts-node-dev --respawn src/index.ts",
-    "client": "cd src/client && yarn start",
     "start": "ts-node ./src/index.ts",
-    "build": "tsc",
-    "heroku-postbuild": "cd src/client && yarn install && yarn build"
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/react-image-gallery": "^1.0.1",
