--- a/tsconfig.json
+++ b/tsconfig.json
@@ -74,5 +74,5 @@
     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "exclude": ["src/client/"]
+  "exclude": []
 }
