--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "server": "ts-node-dev --respawn src/index.ts",
-    "start": "ts-node ./src/index.ts",
+    "start": "ts-node src/index.ts",
     "build": "tsc"
   },
   "devDependencies": {
