Fix all ESLint errors and set it up for automation in the long run (#12)
* Remove irrelevant eslint config that superceeded by airbnb-typescript

* Fix all linter issue automatically fixable by eslint.

* Replace all usage of "==" with "==="

You pretty much never want to use "==" in JS unless you really really
know what you are doing, and even then, don't.

* Replace global isNaN with Number.isNaN

Number version if ES2015 best practice, and what linter expects

* Cleanup badly written while loop to fix linter errors

* Provide explicit radix when parsing numerical score string

ESLint wants this, but it's also best practice, since defaults can get
really tricky here if you aren't careful.

* Remove unused variable in main index.ts file

* Fix eslint issues in patient.api.ts

* Cleanup lint issues in coach.auth.ts

* Cleanup linter issues in twilio.api.ts

Some of these changes were a touch more involved.

* Fix small linter issues in messageTemplate.api.ts

* Cleanup the easier lint errors in messages.api.ts

I left one particularly hairy for loop that will need to be refactored
later.

* Fix linter issues in scheduling.ts

Some of these requird a touch more code to be touched than I was hoping.

* Fix global require issue in twilio.api.ts

This should probably be cleaned up even more to use a modern style
import, but wanted to keep things as little change as possible for now.

* Replace for loop with forEach array enumeration

This fixes the last eslint error in the codebase and is better code
practice anyway.

* Turn on eslint as part of CI

* Don't run linter on typescript compiled JS in build directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,5 @@ jobs:
       run: yarn install --frozen-lockfile
     - name: Compile Typescript
       run: npx tsc
+    - name: Lint Code
+      run: npx eslint .
