--- a/.eslintrc
+++ b/.eslintrc
@@ -6,10 +6,8 @@
   },
   "extends": ["airbnb-typescript", "prettier"],
   "rules": {
-    "no-console": "off",
+    "no-console": "warn",
     "max-len": "off",
-    "no-unused-vars": "warn",
-    "indent": "off",
     "no-underscore-dangle": "off"
   }
 }
