--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "@types/react-image-gallery": "^1.0.1",
     "babel-eslint": "^10.1.0",
     "concurrently": "^5.2.0",
