--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "server": "ts-node-dev --respawn src/index.ts",
     "start": "ts-node src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
