--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      TWILIO_ACCOUNT_SID: some_fake_string
+      TWILIO_AUTH_TOKEN: some_fake_string
+      TWILIO_FROM_NUMBER: 1112223333
+      JWT_SECRET: 6Ngm5GMM1OcZ8JZW
+
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js
@@ -26,3 +32,5 @@ jobs:
       run: npx tsc
     - name: Lint Code
       run: npx eslint .
+    - name: Run Unit Tests
+      run: yarn test
