Properly configure prettier to run with ESLint
Looks like there was sort of a 1/2 setup before that wasn't actually
running it properly on editor save, or as part of the eslint command.

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,9 +5,13 @@
     "project": "./tsconfig.json"
   },
   "extends": ["airbnb-typescript/base", "prettier"],
+  "plugins": [
+    "prettier"
+  ],
   "rules": {
     "no-console": "warn",
     "max-len": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "prettier/prettier": "error",
   }
 }
