--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
-    "prettier": "^2.0.5",
+    "prettier": "^2.2.1",
     "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.0.0-pre.49"
   },
