--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,6 @@
     "no-console": "warn",
     "max-len": "off",
     "no-underscore-dangle": "off",
-    "prettier/prettier": "error",
+    "prettier/prettier": "warn",
   }
 }
