--- a/tsconfig.json
+++ b/tsconfig.json
@@ -75,5 +75,5 @@
     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "exclude": []
+  "exclude": ["test/**/*"]
 }
